# hyperliquid

./: CLAUDE.md  Cargo.toml  README.md  response.json
src/: client.rs  common.rs  config.rs  curl  errors.rs  lib.rs  main.rs  types.rs
src/info/: all_mids.rs  candle_snapshot.rs  delegations.rs  delegator_history.rs  delegator_rewards.rs  delegator_summary.rs  frontend_open_orders.rs  historical_orders.rs  l2_book.rs  max_builder_fee.rs  open_orders.rs  order_status.rs  portfolio.rs  referral.rs  sub_accounts.rs  user_fees.rs  user_fills.rs  user_fills_by_time.rs  user_rate_limit.rs  user_role.rs  user_twap_slice_fills.rs  user_vault_equities.rs  vault_details.rs
src/info/perpetuals/: perp_dexs.rs  perpetuals.rs
tests/: debug_test.rs  error_scenario_tests.rs  http_retry_tests.rs  integration_tests.rs  rate_limit_tests.rs
